<resources>
    <string name="app_name">Saludapp G10</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Ingrese su correo electrónico</string>
    <string name="password_hint">Ingrese su contraseña</string>
    <string name="forgot_label">¿Olvido su contraseña?</string>
    <string name="login_label">Ingresar</string>
    <string name="label1">No tengo una cuenta</string>
    <string name="label2">Suscribirse</string>
    <string name="email_error">Correo invalido</string>
    <string name="password_error">Contraseña invalida</string>
    <string name="forgot_button_label">Cambiar mi contraseña</string>
    <string name="name_label">Ingrese su nombre</string>
    <string name="label3">Tengo una cuenta</string>
    <string name="label4">Iniciar sesión</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Femenino</string>
    <string name="other_label">Otro</string>
    <string name="home_label">Home</string>
    <string name="location_label">Localización</string>
    <string name="specialist_label">Especialistas</string>
    <string name="profile_label">Perfil</string>
    <string name="home_title">Cambia tu vida para mejor</string>
    <string name="home_subtitle">Agenda una cita y te ayudaremos con el problema al que te enfrentas.</string>
    <string name="home_recycler_title">Nuestros servicios</string>
    <string name="specilist_title">Nuestras especialidades</string>
    <string name="specilist_subtitle">agenda una cita con una especialidad de tu preferencia</string>

</resources>